--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,14 +4,15 @@ SYSTEM APP CHANGE LOG
 - = removed features
 
 # -----------------------------------------------------------------------------
-  0.7.0, 2013.12.02
+  0.7.0, 2013.12.06
 + LDAP integration is here! Available via the "settings.passport.ldap" setting.
   When user is authenticated via LDAP but has no record on the MongoDB database
   a new user will be created with "ldap" role.
 + It is now possible to force specific users to have admin role by changing
   the "settings.security.forcedAdmins" key.
++ User roles validation on the server side for increased security.
 * Client libraries were updated to their latest versions.
-* General bug fixes.
+* Lots of small improvements and bug fixes.
 
 # -----------------------------------------------------------------------------
   0.6.8, unreleased
